Enviando as pastas/arquivos para o repositorio no gitHub

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Coffeenelli</title>
-
 </head>
 <body>
     
@@ -25,7 +24,7 @@
         <a href="#menu">menu</a>
         <a href="#products">produtos</a>
         <a href="#review">comentarios</a>
-        <a href="#contact">blogs</a>
+        <a href="#contact">blog</a>
         <a href="#blogs">contato</a>
     </nav>
 
