Enviando o Sobre a Empresa

--- a/index.html
+++ b/index.html
@@ -92,6 +92,31 @@
 </section>
 <!-- inicio section termina aqui -->
 
+
+<!-- sobre section inicia aqui  -->
+<section class="about" id="about">
+
+    <h1 class="heading"> <span>Sobre</span> Nós</h1>
+
+    <div class="row">
+
+        <div class="image">
+            <img src="images/about-img.jpeg" alt="">
+        </div>
+
+        <div class="content">
+            <h3>O que esse café tem de tão Especial?</h3>
+            <p>"desperta lembranças com o seu sabor intenso"</p>
+            <p>Procuramos sempre sair do padrão... um bom café é aquele que possui um sabor que deixara marcado para o resto da vida!</p>
+            <a href="#" class="btn">Saiba Mais</a>
+        </div>
+
+    </div>
+
+</section>
+
+<!-- sobre section termina aqui -->
+
     <div class="credit">criado por <span>Samuel Santinelli</span> | todos os direitos reservados</div>
 
 </section>
