Enviando o conteudo do menu|cardapio

--- a/index.html
+++ b/index.html
@@ -116,6 +116,62 @@
 </section>
 
 <!-- sobre section termina aqui -->
+<!-- menu section inicia aqui  -->
+
+<section class="menu" id="menu">
+
+    <h1 class="heading"> Nosso <span>Menu</span> </h1>
+
+    <div class="box-container">
+
+        <div class="box">
+            <img src="images/menu-1.png" alt="">
+            <h3>Cappucino</h3>
+            <div class="price">$13.99 <span>20.99</span></div>
+            <a href="#" class="btn">adicione no carrinho</a>
+        </div>
+
+        <div class="box">
+            <img src="images/menu-2.png" alt="">
+            <h3>Machiato</h3>
+            <div class="price">$16.99 <span>22.99</span></div>
+            <a href="#" class="btn">adicione no carrinho</a>
+        </div>
+
+        <div class="box">
+            <img src="images/menu-3.png" alt="">
+            <h3>Latte Machiato</h3>
+            <div class="price">$16.00 <span>16.99</span></div>
+            <a href="#" class="btn">adicione no carrinho</a>
+        </div>
+
+        <div class="box">
+            <img src="images/menu-4.png" alt="">
+            <h3>teste</h3>
+            <div class="price">$00.00 <span>00.00</span></div>
+            <a href="#" class="btn">adicione no carrinho</a>
+        </div>
+
+        <div class="box">
+            <img src="images/menu-5.png" alt="">
+            <h3>teste</h3>
+            <div class="price">$00.00 <span>00.00</span></div>
+            <a href="#" class="btn">adicione no carrinho</a>
+        </div>
+
+        <div class="box">
+            <img src="images/menu-6.png" alt="">
+            <h3>teste</h3>
+            <div class="price">$00.00 <span>00.00</span></div>
+            <a href="#" class="btn">adicione no carrinho</a>
+        </div>
+
+    </div>
+
+</section>
+
+<!-- menu section termina aqui -->
+
 
     <div class="credit">criado por <span>Samuel Santinelli</span> | todos os direitos reservados</div>
 
