--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="price">$15.99/-</div>
             </div>
         </div>
-        <a href="#" class="btn">passe o produto agora</a>
+        <a href="#" class="btn">Passe o produto agora</a>
     </div>
 
 </header>
