--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
 </section>
 <!-- inicio section termina aqui -->
 
-
 <!-- sobre section inicia aqui  -->
 <section class="about" id="about">
 
@@ -172,8 +171,7 @@
 
 <!-- menu section termina aqui -->
 
-
-    <div class="credit">criado por <span>Samuel Santinelli</span> | todos os direitos reservados</div>
+    <div class="credit">Criado por <span>Samuel Santinelli</span> | todos os direitos reservados</div>
 
 </section>
 
