Enviando alterações na index/span

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     </div>
 
 </section>
-    <div class="credit">criado por <span>Samuel Santinelli</span> | todos os direitos reservados</div>
+    <div class="credit">Criado por <span>Samuel Santinelli</span> | Todos os direitos reservados</div>
 
 </section>
 
