--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="search-form">
-        <input type="search" id="search-box" placeholder="pesquise...">
+        <input type="search" id="search-box" placeholder="pesquise um café especifico">
         <label for="search-box" class="fas fa-search"></label>
     </div>
 
