Mudando a parte de alterações

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="#about">sobre</a>
         <a href="#menu">menu</a>
         <a href="#products">produtos</a>
-        <a href="#review">comentarios</a>
+        <a href="#review">avaliações</a>
         <a href="#contact">blog</a>
         <a href="#blogs">contato</a>
     </nav>
