Acrescentando a parte de comentarios

--- a/index.html
+++ b/index.html
@@ -173,8 +173,6 @@
 
 <!-- produtos section começa aqui -->
 
-
-
 <section class="products" id="products">
 
     <h1 class="heading"> outros <span>produtos</span> </h1>
@@ -254,7 +252,64 @@
 </section>
     <div class="credit">Criado por <span>Samuel Santinelli</span> | Todos os direitos reservados</div>
 
+
+
+<!-- avaliações section inicia aqui  -->
+
+<section class="review" id="review">
+
+    <h1 class="heading"> comentários <span>dos clientes</span> </h1>
+
+    <div class="box-container">
+
+        <div class="box">
+            <img src="images/quote-img.png" alt="" class="quote">
+            <p>Acidez no café é bom? Essa é uma questão difícil de ser abordada, principalmente porque falamos de gosto pessoal. M...
+            </p>
+            <img src="images/pic-1.png" class="user" alt="">
+            <h3>Antony Ballerini</h3>
+            <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="images/quote-img.png" alt="" class="quote">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi nobis? Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus vel? Nemo.</p>
+            <img src="images/pic-2.png" class="user" alt="">
+            <h3>Joice Brasil</h3>
+            <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+            </div>
+        </div>
+        
+        <div class="box">
+            <img src="images/quote-img.png" alt="" class="quote">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi nobis? Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus vel? Nemo.</p>
+            <img src="images/pic-3.png" class="user" alt="">
+            <h3>Petrus Silva</h3>
+            <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+            </div>
+        </div>
+
+    </div>
+
 </section>
+
+<!-- avaliações section termina aqui -->
 
 <!-- footer acaba aqui -->
 
