--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
         <div class="box">
             <img src="images/quote-img.png" alt="" class="quote">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae minus corporis, suscipit laudantium voluptate fugit deserunt quidem soluta repellendus sint ratione officia, odit error obcaecati quas commodi voluptatem nulla perspiciatis.
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae minus corporis, suscipit laudantium voluptate fugit deserunt quidem soluta repellendus sint ratione officia, odit error obcaecati quas commodi voluptatem nulla perspiciatis
             </p>
             <img src="images/pic-1.png" class="user" alt="">
             <h3>Antony Ballerini</h3>
