Enviando o conteudo de comentários

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae minus corporis, suscipit laudantium voluptate fugit deserunt quidem soluta repellendus sint ratione officia, odit error obcaecati quas commodi voluptatem nulla perspiciatis
             </p>
             <img src="images/pic-1.png" class="user" alt="">
-            <h3>Antony Ballerini</h3>
+            <h3>Antony João</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
