--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         
         <div class="box">
             <img src="images/quote-img.png" alt="" class="quote">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi nobis? Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus vel? Nemo.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, Animi nulla sit libero nemo fuga sequi nobis? Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus vel? Nemo.</p>
             <img src="images/pic-3.png" class="user" alt="">
             <h3>Petrus Silva</h3>
             <div class="stars">
