--- a/index.html
+++ b/index.html
@@ -311,6 +311,41 @@
 
 <!-- avaliações section termina aqui -->
 
+
+<!-- contatos section inicia aqui -->
+
+<section class="contact" id="contact">
+
+    <h1 class="heading"> <span>fale</span> conosco </h1>
+
+    <div class="row">
+
+        <!-- iframe - permite inserir uma pagina dentro de uma box -->
+        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29276.363111143826!2d-46.88371138889647!3d-23.4768574223817!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cf03aaf6d062af%3A0x2c22de58cd7f17f1!2sAlphaville%2C%20Santana%20de%20Parna%C3%ADba%20-%20SP%2C%2006542-115!5e0!3m2!1spt-BR!2sbr!4v1640096190707!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy"></iframe>
+
+        <form action="">
+            <h3>Entre em contato</h3>
+            <div class="inputBox">
+                <span class="fas fa-user"></span>
+                <input type="text" placeholder="nome">
+            </div>
+            <div class="inputBox">
+                <span class="fas fa-envelope"></span>
+                <input type="email" placeholder="email">
+            </div>
+            <div class="inputBox">
+                <span class="fas fa-phone"></span>
+                <input type="number" placeholder="telefone">
+            </div>
+            <input type="submit" value="contact now" class="btn">
+        </form>
+
+    </div>
+
+</section>
+
+<!-- contatos section termina aqui -->
+
 <!-- footer acaba aqui -->
 
 <!-- link do arquivo do js  -->
